feat: update product and delete product added at route with swagger
